fix: use internal auth role lookup for user management